force-app/main/default/objects/Equipment__c/Equipment__c.object-meta.xml
<CustomObject>
    <description>Truck/trailer equipment units owned and operated by carriers</description>
    <label>Equipment</label>
    <nameField>
        <label>Equipment ID</label>
        <type>AutoNumber</type>
        <displayFormat>EQ-{0000000}</displayFormat>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>