force-app/main/default/objects/Equipment__c/fields/Capacity_lbs__c.field-meta.xml
<CustomField>
    <fullName>Capacity_lbs__c</fullName>
    <description>Equipment weight capacity in pounds</description>
    <label>Capacity (lbs)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>