force-app/main/default/objects/Equipment__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <description>Carrier that owns this equipment</description>
    <label>Carrier</label>
    <referenceTo>Carrier__c</referenceTo>
    <relationshipLabel>Equipment</relationshipLabel>
    <relationshipName>Equipment_Units</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>