force-app/main/default/objects/Equipment__c/fields/Current_Load__c.field-meta.xml
<CustomField>
    <fullName>Current_Load__c</fullName>
    <description>Load currently assigned to this equipment (if any)</description>
    <label>Current Load</label>
    <referenceTo>Load__c</referenceTo>
    <relationshipLabel>Equipment Assigned</relationshipLabel>
    <relationshipName>Equipment_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>