force-app/main/default/objects/Equipment__c/fields/Length_ft__c.field-meta.xml
<CustomField>
    <fullName>Length_ft__c</fullName>
    <description>Equipment length in feet</description>
    <label>Length (ft)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>