force-app/main/default/objects/Equipment__c/fields/Motive_Vehicle_ID__c.field-meta.xml
<CustomField>
    <fullName>Motive_Vehicle_ID__c</fullName>
    <description>External ID from Motive for this vehicle (for linking GPS tracking events to equipment)</description>
    <externalId>true</externalId>
    <label>Motive Vehicle ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>