force-app/main/default/objects/Equipment__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <description>Unit/tractor/trailer number (e.g., T-01, 53-FL-01)</description>
    <externalId>true</externalId>
    <label>Unit Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>