force-app/main/default/objects/Equipment__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <description>Vehicle Identification Number</description>
    <externalId>true</externalId>
    <label>VIN</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>